<resources>
    <string name="app_name">chatapp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="chatapp">chatapp</string>
    <string name="welcome_back">welcome_back</string>
    <string name="create_account">Create Account</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="abc_xyz">abc xyz</string>
    <string name="username">Username</string>
    <string name="_9876543210">9876543210</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account2">Create account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="response">response</string>
    <string name="msg" />
</resources>